--- a/NAVBAR/index.html
+++ b/NAVBAR/index.html
@@ -9,11 +9,11 @@
           <li class="item"><a href="#">Home</a></li>
           <li class="item"><a href="#">About Us</a></li>
           <li class="item has-submenu">
-            <a tabindex="0">Expertise</a>
+            <a href="#" tabindex="0">Expertise</a>
             
           </li>
           <li class="item has-submenu">
-            <a tabindex="0">Careers</a>
+            <a href="#" tabindex="0">Careers</a>
   
           </li>
           
