--- a/NAVBAR/index.html
+++ b/NAVBAR/index.html
@@ -12,7 +12,8 @@
 
     <nav>
       <ul class="menu">
-        <li class="logo"><a href="#"></a>
+        <li class="logo"><a href="#"> <img src="/didi website/img/logo_1.png" alt="SSLEGALPARTNERS"></a>
+  
   
         </li>
         <li class="item"><a href="#">Home</a></li>
