--- a/About Us/index.html
+++ b/About Us/index.html
@@ -24,7 +24,7 @@
     </dir>
     <nav>
       <ul class="menu">
-        <li class="logo"><a href="#"> <img src="/didi website/img/logo_1.png" alt="SSLEGALPARTNERS"></a>
+        <li class="logo"><a href="#"> <img src="/About Us/img/logo_1.png" alt="SSLEGALPARTNERS"></a>
   
         </li>
         <li class="item"><a href="#">Home</a></li>
